added firebase support

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Reddit Clone</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
+  <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+  <script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
   <script src="moment/bower_components/moment/moment.js"></script>
   <script src="moment/bower_components/angular-moment/angular-moment.js"></script>
+  <script src="moment/bower_components/angular/angular.js"></script>
 </head>
 <body ng-controller="RedditController">
   <header ng-class="{headersearch: hoversearch, headerplus: hoverplus, headersort: hoversort}">
@@ -44,7 +46,7 @@
         </div>
         <article>
           <h1>{{post.title}} | </h1>
-          <button class="vote" ng-click="upVote(post.id)"  ng-mouseenter="hovervote = true" ng-mouseleave="hovervote = false" ng-class="{makepost: hovervote}">
+          <button class="vote" ng-click="upVote(post)"  ng-mouseenter="hovervote = true" ng-mouseleave="hovervote = false" ng-class="{makepost: hovervote}">
             <i class="fa fa-arrow-up"></i>
           </button>
           <button class="vote" ng-click="downVote(post.id)" ng-mouseenter="hoverdownvote = true" ng-mouseleave="hoverdownvote = false" ng-class="{makepost: hoverdownvote}">
@@ -56,7 +58,7 @@
           <p>{{post.description}}</p>
           <footer>
             <span class="date">{{post.time | amCalendar}} | </span>
-            <button ng-click="showComments(post.id)" ng-mouseenter="hovercomments = true" ng-mouseleave="hovercomments = false" ng-class="{makepost: hovercomments}">{{post.comments.length}} Comments</button>
+            <button ng-click="showComments(post)" ng-mouseenter="hovercomments = true" ng-mouseleave="hovercomments = false" ng-class="{makepost: hovercomments}">{{post.comments.length}} Comments</button>
           </footer>
         </article>
       </section>
@@ -65,9 +67,9 @@
           <li ng-show="post.show" ng-repeat="comment in post.comments track by $index">{{comment}}</li>
         </ul>
         <form class="makecomment" ng-show="post.show">
-          <label><input type="text" ng-model="username" placeholder="your name"></label>
+          <label><input type="text" ng-model="name" placeholder="your name"></label>
           <label><input class="commenttext" type="text" ng-model="content" placeholder="comment"></label>
-          <button class="newcomment" ng-click="makeComment(post.id, username, content)" ng-mouseenter="hovernewcomment = true" ng-mouseleave="hovernewcomment = false" ng-class="{makepost: hovernewcomment}"> <i class="fa fa-plus"></i></button>
+          <button class="newcomment" ng-click="makeComment(post, name, content)" ng-mouseenter="hovernewcomment = true" ng-mouseleave="hovernewcomment = false" ng-class="{makepost: hovernewcomment}"> <i class="fa fa-plus"></i></button>
        </form>
       </div>
     </li>
@@ -86,8 +88,5 @@
   </div>
   <script src="./javascripts/app.js"></script>
   <script src="./javascripts/controllers.js"></script>
-  <script src="./javascripts/directives.js"></script>
-  <script src="./javascripts/filters.js"></script>
-  <script src="./javascripts/services.js"></script>
 </body>
 </html>
