just some refactoring

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <link rel="stylesheet" href="style.css">
   <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   <script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
-  <script src="moment/bower_components/moment/moment.js"></script>
-  <script src="moment/bower_components/angular-moment/angular-moment.js"></script>
-  <script src="moment/bower_components/angular/angular.js"></script>
 </head>
 <body ng-controller="RedditController">
   <header ng-class="{headersearch: hoversearch, headerplus: hoverplus, headersort: hoversort}">
@@ -49,7 +46,7 @@
           <button class="vote" ng-click="upVote(post)"  ng-mouseenter="hovervote = true" ng-mouseleave="hovervote = false" ng-class="{makepost: hovervote}">
             <i class="fa fa-arrow-up"></i>
           </button>
-          <button class="vote" ng-click="downVote(post.id)" ng-mouseenter="hoverdownvote = true" ng-mouseleave="hoverdownvote = false" ng-class="{makepost: hoverdownvote}">
+          <button class="vote" ng-click="downVote(post)" ng-mouseenter="hoverdownvote = true" ng-mouseleave="hoverdownvote = false" ng-class="{makepost: hoverdownvote}">
             <i class="fa fa-arrow-down"></i>
           </button>
           <h1 ng-class="{good: post.likes > 0, bad: post.likes < 0, none: post.likes === 0}">{{post.likes}}</h1>
@@ -64,12 +61,12 @@
       </section>
       <div class="comments">
         <ul>
-          <li ng-show="post.show" ng-repeat="comment in post.comments track by $index">{{comment}}</li>
+          <li ng-show="post.show" ng-init="post.show = false" ng-repeat="comment in post.comments track by $index">{{comment}}</li>
         </ul>
         <form class="makecomment" ng-show="post.show">
           <label><input type="text" ng-model="name" placeholder="your name"></label>
           <label><input class="commenttext" type="text" ng-model="content" placeholder="comment"></label>
-          <button class="newcomment" ng-click="makeComment(post, name, content)" ng-mouseenter="hovernewcomment = true" ng-mouseleave="hovernewcomment = false" ng-class="{makepost: hovernewcomment}"> <i class="fa fa-plus"></i></button>
+          <button class="newcomment" ng-click="makeComment(post, name, content); name=''; content=''" ng-mouseenter="hovernewcomment = true" ng-mouseleave="hovernewcomment = false" ng-class="{makepost: hovernewcomment}"> <i class="fa fa-plus"></i></button>
        </form>
       </div>
     </li>
@@ -86,6 +83,9 @@
       <span ng-show="submitform.$invalid" class="incomplete"> * Fill out all fields to post!</span>
     </form>
   </div>
+  <script src="moment/bower_components/moment/moment.js"></script>
+  <script src="moment/bower_components/angular-moment/angular-moment.js"></script>
+  <script src="moment/bower_components/angular/angular.js"></script>
   <script src="./javascripts/app.js"></script>
   <script src="./javascripts/controllers.js"></script>
 </body>
